[project]
name = 'hldlib'
readme = 'README.md'
description = 'A Python package for working with Hyper Light Drifter files'
license = { file = "LICENSE" }
version = '1.0.0'

[project.urls]
Homepage = 'https://github.com/sakhezech/hldlib'

[tool.ruff]
line-length = 79
[tool.ruff.format]
quote-style = 'single'
[tool.ruff.lint]
extend-select = ['I', 'E501']

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
